kind/demo-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gc-thrasher
  labels:
    app: gc-thrasher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gc-thrasher
  template:
    metadata:
      labels:
        app: gc-thrasher
    spec:
      containers:
      - name: gc-thrasher
        image: demo/gc-thrasher:0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /app/health
            port: 9393
          initialDelaySeconds: 120
          timeoutSeconds: 3
          periodSeconds: 3
        args: ["-javaagent:/opt/app/dd-java-agent.jar", "-jar", "gc-thrasher.jar"]
        ports:
        - containerPort: 8080
        - containerPort: 9393
        resources:
          requests:
            memory: "240Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: gc-thrasher
spec:
  selector:
    app: gc-thrasher
  ports:
  - port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  labels:
    app: node-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: demo/node-api:0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 3
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "20Mi"
            cpu: "100m"
          limits:
            memory: "40Mi"
            cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: node-api
spec:
  selector:
    app: node-api
  ports:
  - port: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-ingress-node-api-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-api
            port:
              number: 3000
