kind/localhost-ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
  - hosts:
    - localhost
  rules:
  - host: localhost
